--- a/src/src/index.html
+++ b/src/src/index.html
@@ -10,13 +10,34 @@
       <table class="table table-hover">
         <thead>
           <tr>
-            <th ng-click='sortBy("name")'>Library</th>
-            <th ng-click='sortBy("watchers")'>Stars</th>
-            <th ng-click='sortBy("forks")'>Forks</th>
-            <th ng-click='sortBy("createdTime")'>Created</th>
-            <th ng-click='sortBy("updatedTime")'>Updated</th>
-            <th ng-click='sortBy("issues")'>Issues</th>
-            <th ng-click='sortBy("license")'>License</th>
+            <th ng-click='sortBy("name")'>Library
+            <span class="glyphicon glyphicon-arrow-down" ng-show='sort.name === "name" && sort.direction === 1'></span>
+            <span class="glyphicon glyphicon-arrow-up" ng-show='sort.name === "name" && sort.direction === -1'></span>
+          </th>
+          <th ng-click='sortBy("watchers")'>Stars
+            <span class="glyphicon glyphicon-arrow-down" ng-show='sort.name === "watchers" && sort.direction === 1'></span>
+            <span class="glyphicon glyphicon-arrow-up" ng-show='sort.name === "watchers" && sort.direction === -1'></span>
+          </th>
+          <th ng-click='sortBy("forks")'>Forks
+            <span class="glyphicon glyphicon-arrow-down" ng-show='sort.name === "forks" && sort.direction === 1'></span>
+            <span class="glyphicon glyphicon-arrow-up" ng-show='sort.name === "forks" && sort.direction === -1'></span>
+          </th>
+          <th ng-click='sortBy("createdTime")'>Created
+            <span class="glyphicon glyphicon-arrow-down" ng-show='sort.name === "createdTime" && sort.direction === 1'></span>
+            <span class="glyphicon glyphicon-arrow-up" ng-show='sort.name === "createdTime" && sort.direction === -1'></span>
+          </th>
+          <th ng-click='sortBy("updatedTime")'>Updated
+            <span class="glyphicon glyphicon-arrow-down" ng-show='sort.name === "updatedTime" && sort.direction === 1'></span>
+            <span class="glyphicon glyphicon-arrow-up" ng-show='sort.name === "updatedTime" && sort.direction === -1'></span>
+          </th>
+          <th ng-click='sortBy("issues")'>Issues
+            <span class="glyphicon glyphicon-arrow-down" ng-show='sort.name === "issues" && sort.direction === 1'></span>
+            <span class="glyphicon glyphicon-arrow-up" ng-show='sort.name === "issues" && sort.direction === -1'></span>
+          </th>
+          <th ng-click='sortBy("license")'>License
+            <span class="glyphicon glyphicon-arrow-down" ng-show='sort.name === "license" && sort.direction === 1'></span>
+            <span class="glyphicon glyphicon-arrow-up" ng-show='sort.name === "license" && sort.direction === -1'></span>
+          </th>
           </tr>
           <tr ng-repeat='library in libraries'>
             <td><a href='#' target="_blank" ng-href='{{library.url}}'>{{library.name}}</td>
