--- a/src/src/index.html
+++ b/src/src/index.html
@@ -7,7 +7,7 @@
   </head>
   <body ng-controller='AppController'>
     <div class='container'>
-      <table class="table table-hover">
+      <table class="table table-hover ng-hide" ng-show='loaded'>
         <thead>
           <tr>
             <th ng-click='sortBy("name")'>Library
@@ -50,6 +50,7 @@
           </tr>
         </thead>
       </table>
+      <h2 ng-hide='loaded'>Loading statistics...</h2>
     </div>
     <script src='external.min.js' type="text/javascript" charset="utf-8">
     </script>
