--- a/src/src/index.html
+++ b/src/src/index.html
@@ -55,6 +55,8 @@
     </div>
     <script src='external.min.js' type="text/javascript" charset="utf-8">
     </script>
+    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular-route.min.js'>
+    </script>
     <script src='bundle.js' type="text/javascript" charset="utf-8">
     </script>
   </body>
