--- a/src/src/scripts/examples/almende_vis/01.basic/index.html
+++ b/src/src/scripts/examples/almende_vis/01.basic/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>JS Bin</title>
+  <title>Almend/Vis Basic Graph Example</title>
 </head>
 <body>
 
