--- a/src/src/scripts/examples/almende_vis/01.basic/index.html
+++ b/src/src/scripts/examples/almende_vis/01.basic/index.html
@@ -3,6 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>Almend/Vis Basic Graph Example</title>
+  <style type="text/css">
+    #mynetwork {
+      width: 400px;
+      height: 400px;
+      border: 1px solid lightgray;
+    }
+  </style>
 </head>
 <body>
 
