--- a/src/src/scripts/examples/almende_vis/01.basic/index.html
+++ b/src/src/scripts/examples/almende_vis/01.basic/index.html
@@ -4,10 +4,13 @@
   <meta charset="utf-8">
   <title>Almend/Vis Basic Graph Example</title>
   <style type="text/css">
+    body,
     #mynetwork {
-      width: 400px;
-      height: 400px;
-      border: 1px solid lightgray;
+      position: absolute;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
     }
   </style>
 </head>
