--- a/src/src/scripts/examples/cytoscape_cytoscapejs/01.basic/index.html
+++ b/src/src/scripts/examples/cytoscape_cytoscapejs/01.basic/index.html
@@ -17,7 +17,7 @@
 <body>
 <div id="mynetwork"></div>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-<script src="http://cytoscape.github.io/cytoscape.js/js/arbor.js"></script>
+<script src="../lib/arbor.js"></script>
 <script src="http://cytoscape.github.io/cytoscape.js/api/cytoscape.js-latest/cytoscape.min.js"></script>
 <script>
 $('#mynetwork').cytoscape({
