--- a/src/src/scripts/examples/dhotson_springy/01.basic/index.html
+++ b/src/src/scripts/examples/dhotson_springy/01.basic/index.html
@@ -25,13 +25,11 @@
   var graph = new Springy.Graph();
 
   graph.addNodes('Node 1', 'Node 2', 'Node 3', 'Node 4', 'Node 5');
-
   graph.addEdges(
-      ['Node 1',  'Node 2'],
-      ['Node 1',  'Node 3'],
-      ['Node 2',  'Node 4'],
-      ['Node 2',  'Node 5']
-    );
+      ['Node 1', 'Node 2'],
+      ['Node 1', 'Node 3'],
+      ['Node 2', 'Node 4'],
+      ['Node 2', 'Node 5']);
 
   jQuery('#mynetwork').springy({ graph: graph });
 </script>
