Using locked version of the library
I think this makes more sense. Don't want to use external dependencies

--- a/src/src/scripts/examples/cpettitt_dagre/01.basic/index.html
+++ b/src/src/scripts/examples/cpettitt_dagre/01.basic/index.html
@@ -30,8 +30,8 @@ svg {
     <g transform="translate(20,20)"/>
 </svg>
 
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="http://cpettitt.github.io/project/dagre-d3/latest/dagre-d3.min.js"></script>
+<script src="../lib/d3.v3.min.js"></script>
+<script src="../lib/dagre-d3.min.js"></script>
 <script>
 // Create a new directed graph
 var g = new dagreD3.Digraph();
