--- a/src/src/scripts/examples/almende_vis/01.basic/index.html
+++ b/src/src/scripts/examples/almende_vis/01.basic/index.html
@@ -18,7 +18,7 @@
 
 <div id="mynetwork"></div>
 
-<script src='http://visjs.org/dist/vis.js'></script>
+<script src='../lib/vis.js'></script>
 <script>
 // create an array with nodes
   var nodes = [
