--- a/src/src/scripts/examples/anvaka_vivagraphjs/01.basic/index.html
+++ b/src/src/scripts/examples/anvaka_vivagraphjs/01.basic/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<script src='https://anvaka.github.io/VivaGraphJS/dist/vivagraph.js'></script>
+<script src='../lib/vivagraph.js'></script>
 <script>
   // create a network
   var graph = Viva.Graph.graph();
