Modified basic example of GraphAlchemist/Alchemy
It feels more natural to have forceLocked and linkDistance

--- a/src/src/scripts/examples/GraphAlchemist_Alchemy/01.basic/index.html
+++ b/src/src/scripts/examples/GraphAlchemist_Alchemy/01.basic/index.html
@@ -21,6 +21,8 @@
 <script>
 alchemy.begin({
   divSelector: '#mynetwork',
+  forceLocked: false,
+  linkDistance: function(){ return 40; },
   dataSource: {
     nodes: [
       { id: 1 },
