--- a/src/src/scripts/examples/almende_vis/02.perf/index.html
+++ b/src/src/scripts/examples/almende_vis/02.perf/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>almende/vis Performance Test</title>
+  <title>almende/vis Graph Drawing Performance Test</title>
   <style type="text/css">
     body,
     #mynetwork {
