--- a/src/src/scripts/examples/mbostock_d3/01.basic/index.html
+++ b/src/src/scripts/examples/mbostock_d3/01.basic/index.html
@@ -15,7 +15,14 @@
   stroke: #999;
   stroke-opacity: .6;
 }
-
+    body,
+    svg {
+      position: absolute;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+    }
 </style>
 </head>
 <body>
@@ -51,8 +58,8 @@ var G = {
     target: 4
   }]
 };
-var width = 960,
-  height = 500;
+var width = document.body.clientWidth,
+    height = document.body.clientHeight;
 
 var svg = d3.select("#mynetwork").append("svg")
   .attr("width", width)
