--- a/src/src/index.html
+++ b/src/src/index.html
@@ -2,12 +2,30 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Graph Drawing Libraries</title>
+    <title>We Love Graphs: JavaScript Graph Drawing Libraries</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
   </head>
   <body>
+    <nav class="navbar navbar-default" role="navigation" ng-controller='navController'>
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">We ♥ Graphs</a>
+        </div>
+
+        <ul class="nav navbar-nav">
+          <li ng-class='currentRoute === "all" ? "active" : ""'><a href="#/all">Github Stats</a></li>
+          <li ng-class='currentRoute === "details" ? "active" : ""'><a href="#/library/almende_vis" ng-href="{{lastDetailsRoute}}">Details</a></li>
+        </ul>
+
+        <ul class="nav navbar-nav navbar-right">
+          <li><a title="Fork me on GitHub"  href="https://github.com/anvaka/graph-drawing-libraries"><i class="fa fa-github fa-lg"></i></a></li>
+          <li><a title="Share on Twitter" ng-click='share("twitter", $event)' href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fanvaka.github.io%2Fgraph-drawing-libraries%2F"><i class="fa fa-twitter fa-lg"></i></a></li>
+          <li><a title="Share on Google+" ng-click='share("google", $event)' href="https://plus.google.com/share?url=http%3A%2F%2Fanvaka.github.io%2Fgraph-drawing-libraries%2F"><i class="fa fa-google-plus fa-lg"></i></a></li>
+          <li><a title="Share on Facebook" ng-click='share("facebook", $event)' href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fanvaka.github.io%2Fgraph-drawing-libraries%2F"><i class="fa fa-facebook fa-lg"></i></a></li>
+        </ul>
+      </div><!-- /.container-fluid -->
+    </nav>
     <div ng-view></div>
-    <a href="https://github.com/anvaka/graph-drawing-libraries"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png"></a>
     <script src='external.min.js' type="text/javascript" charset="utf-8">
     </script>
     <script src='bundle.js' type="text/javascript" charset="utf-8">
