Will be using separate build for performance frame

--- a/src/src/scripts/performance/index.html
+++ b/src/src/scripts/performance/index.html
@@ -10,7 +10,7 @@
     <select id="currentLibrary">
     </select>
   </div>
-  <script>
-  </script>
+  <script src='angular.min.js'></script>
+  <script src='perfBundle.js'></script>
 </body>
 </html>
