--- a/src/src/scripts/performance/index.html
+++ b/src/src/scripts/performance/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app='perf'>
 <head>
   <meta charset="UTF-8">
   <title>Libraries performance comparison</title>
