Updated to latest version of vis (4.9.0)
I tried to update
https://github.com/anvaka/graph-drawing-libraries/blob/master/src/src/scripts/examples/almende_vis/02.perf/index.html
as well, so that it reflects possible optimization

cc @josdejong - please let me know if there is anything else that I can
do to improve performance of the example

--- a/src/src/scripts/examples/almende_vis/01.basic/index.html
+++ b/src/src/scripts/examples/almende_vis/01.basic/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Almend/Vis Basic Graph Example</title>
+  <link rel="stylesheet" href="../lib/vis.css" type="text/css" media="screen" charset="utf-8">
   <style type="text/css">
     body,
     #mynetwork {
