Updated to latest version of GraphAlchemist

--- a/src/src/scripts/examples/GraphAlchemist_Alchemy/01.basic/index.html
+++ b/src/src/scripts/examples/GraphAlchemist_Alchemy/01.basic/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
 <div id="mynetwork"></div>
+<script src='../lib/scripts/vendor.js'></script>
 <script src='../lib/alchemy.min.js'></script>
 <script>
 alchemy.begin({
