--- a/src/src/scripts/examples/GraphAlchemist_Alchemy/02.perf/index.html
+++ b/src/src/scripts/examples/GraphAlchemist_Alchemy/02.perf/index.html
@@ -18,6 +18,7 @@
 <body>
 <div id="mynetwork"></div>
 <script src='../../../performance/runSuite.js'></script>
+<script src='../lib/scripts/vendor.js'></script>
 <script src='../lib/alchemy.min.js'></script>
 <script>
 runSuite(function (ngraph) {
