Updated to dagre to v 0.4.10

--- a/src/src/scripts/examples/cpettitt_dagre/01.basic/index.html
+++ b/src/src/scripts/examples/cpettitt_dagre/01.basic/index.html
@@ -34,28 +34,39 @@ svg {
 <script src="../lib/dagre-d3.min.js"></script>
 <script>
 // Create a new directed graph
-var g = new dagreD3.Digraph();
+var g = new dagreD3.graphlib.Graph()
+  .setGraph({})
+  .setDefaultEdgeLabel(function() { return {}; } );
 
 // Add nodes to the graph. The first argument is the node id. The second is
 // metadata about the node. In this case we're going to add labels to each of
 // our nodes.
-g.addNode(1, { label: "Node 1" });
-g.addNode(2, { label: "Node 2" });
-g.addNode(3, { label: "Node 3" });
-g.addNode(4, { label: "Node 4" });
-g.addNode(5, { label: "Node 5" });
+g.setNode(1, { label: "Node 1" });
+g.setNode(2, { label: "Node 2" });
+g.setNode(3, { label: "Node 3" });
+g.setNode(4, { label: "Node 4" });
+g.setNode(5, { label: "Node 5" });
 
-// Add edges to the graph. The first argument is the edge id. Here we use null
-// to indicate that an arbitrary edge id can be assigned automatically. The
-// second argument is the source of the edge. The third argument is the target
-// of the edge. The last argument is the edge metadata.
-g.addEdge(null,1, 2, { label: "Label 1->2" });
-g.addEdge(null,1, 3, { label: "Label 1->3" });
-g.addEdge(null,2, 4, { label: "Label 2->4" });
-g.addEdge(null,2, 5, { label: "Label 2->5" });
+// Add edges to the graph.
+g.setEdge(1, 2, { label: "Label 1->2" });
+g.setEdge(1, 3, { label: "Label 1->3" });
+g.setEdge(2, 4, { label: "Label 2->4" });
+g.setEdge(2, 5, { label: "Label 2->5" });
 
-var renderer = new dagreD3.Renderer();
-renderer.run(g, d3.select("svg g"));
+// Create the renderer
+var render = new dagreD3.render();
+
+// Set up an SVG group so that we can translate the final graph.
+var svg = d3.select("svg"),
+    svgGroup = svg.append("g");
+
+// Run the renderer. This is what draws the final graph.
+render(d3.select("svg g"), g);
+
+// Center the graph
+var xCenterOffset = (svg.attr("width") - g.graph().width) / 2;
+svgGroup.attr("transform", "translate(" + xCenterOffset + ", 20)");
+svg.attr("height", g.graph().height + 40);
 </script>
 </body>
 </html>
