--- a/src/src/scripts/examples/cpettitt_dagre/02.perf/index.html
+++ b/src/src/scripts/examples/cpettitt_dagre/02.perf/index.html
@@ -46,13 +46,15 @@ svg {
     .attr('height', document.body.clientHeight);
   runSuite(function (ngraph) {
     // Create a new directed graph
-    var g = new dagreD3.Digraph();
+    var g = new dagreD3.graphlib.Graph()
+      .setGraph({})
+      .setDefaultEdgeLabel(function() { return {}; } );
 
     ngraph.forEachNode(function (node) {
       // Add nodes to the graph. The first argument is the node id. The second is
       // metadata about the node. In this case we're going to add labels to each of
       // our nodes.
-      g.addNode(node.id, { label: node.id.toString() });
+      g.setNode(node.id, { label: node.id.toString() });
     });
 
     ngraph.forEachLink(function (link) {
@@ -60,11 +62,30 @@ svg {
       // to indicate that an arbitrary edge id can be assigned automatically. The
       // second argument is the source of the edge. The third argument is the target
       // of the edge. The last argument is the edge metadata.
-      g.addEdge(null, link.fromId, link.toId);
+      g.setEdge(link.fromId, link.toId);
     });
 
-    var renderer = new dagreD3.Renderer();
-    renderer.run(g, d3.select("svg g"));
+    // Create the renderer
+    var render = new dagreD3.render();
+
+    // Set up an SVG group so that we can translate the final graph.
+    var svg = d3.select("svg"),
+        svgGroup = svg.append("g");
+
+    var inner = d3.select("svg g");
+    var zoom = d3.behavior.zoom().on("zoom", function() {
+      inner.attr("transform", "translate(" + d3.event.translate + ")" +
+                                  "scale(" + d3.event.scale + ")");
+    });
+    svg.call(zoom);
+    // Run the renderer. This is what draws the final graph.
+    render(d3.select("svg g"), g);
+
+
+    // Center the graph
+    var xCenterOffset = (svg.attr("width") - g.graph().width) / 2;
+    svgGroup.attr("transform", "translate(" + xCenterOffset + ", 20)");
+    svg.attr("height", g.graph().height + 40);
   });
 </script>
 </body>
