Use full heroku app domain for issuestats

--- a/src/src/scripts/all/all.html
+++ b/src/src/scripts/all/all.html
@@ -45,7 +45,7 @@
         <td ng-attr-title='{{library.updatedTooltip}}'>{{library.updated}}</td>
         <td>{{library.issues}}
           <br>
-          <img ng-src='//issuestats.com/github/{{library.name}}/badge/issue'>
+          <img ng-src='//issuestats.herokuapp.com/github/{{library.name}}/badge/issue'>
         </td>
         <td>{{library.license}}</td>
       </tr>
