fixes cytoscape.js library path
This fixes #13

--- a/src/src/scripts/examples/cytoscape_cytoscape.js/01.basic/index.html
+++ b/src/src/scripts/examples/cytoscape_cytoscape.js/01.basic/index.html
@@ -18,7 +18,7 @@
 <div id="mynetwork"></div>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script src="../lib/arbor.js"></script>
-<script src="http://cytoscape.github.io/cytoscape.js/api/cytoscape.js-latest/cytoscape.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.2.3/cytoscape.min.js"></script>
 <script>
 $('#mynetwork').cytoscape({
   style: cytoscape.stylesheet()
