--- a/src/src/scripts/examples/cytoscape_cytoscape.js/02.perf/index.html
+++ b/src/src/scripts/examples/cytoscape_cytoscape.js/02.perf/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div id="mynetwork"></div>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script src="../lib/arbor.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.2.3/cytoscape.min.js"></script>
 <script src='../../../performance/runSuite.js'></script>
