--- a/src/src/scripts/examples/samizdatco_arbor/01.basic/index.html
+++ b/src/src/scripts/examples/samizdatco_arbor/01.basic/index.html
@@ -10,7 +10,7 @@
 
 <canvas id="mynetwork" width="800" height="600"></canvas>
 
-<script src='http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js'></script>
+<script src='https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js'></script>
 <script src='../lib/arbor.js'></script>
 <script src='../lib/arbor-graphics.js'></script>
 <script src='../lib/renderer.js'></script>
