--- a/src/src/scripts/examples/dhotson_springy/01.basic/index.html
+++ b/src/src/scripts/examples/dhotson_springy/01.basic/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <canvas id="mynetwork" width="640" height="480" />
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script src='../lib/springy.js'></script>
 <script src='../lib/springyui.js'></script>
 <script>
