--- a/src/src/index.html
+++ b/src/src/index.html
@@ -3,32 +3,39 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>We Love Graphs: JavaScript Graph Drawing Libraries</title>
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <style>
+      * {
+        box-sizing: border-box;
+      }
+      body {
+        font-family: Avenir, Helvetica, Arial, sans-serif;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+      tr.header {
+        font-weight: bold;
+      }
+      td a {
+        text-decoration: none;
+      }
+      td {
+        text-align: center;
+      }
+      td.name {
+        text-align: left;
+      }
+    </style>
   </head>
   <body>
-    <nav class="navbar navbar-default" role="navigation" ng-controller='navController'>
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">We ♥ Graphs</a>
-        </div>
-
-        <ul class="nav navbar-nav">
-          <li ng-class='currentRoute === "all" ? "active" : ""'><a href="#/all">Github Stats</a></li>
-          <li ng-class='currentRoute === "details" ? "active" : ""'><a href="#/library/almende_vis" ng-href="{{lastDetailsRoute}}">Details</a></li>
-        </ul>
-
-        <ul class="nav navbar-nav navbar-right">
-          <li><a title="Fork me on GitHub"  href="https://github.com/anvaka/graph-drawing-libraries"><i class="fa fa-github fa-lg"></i></a></li>
-          <li><a title="Share on Twitter" ng-click='share("twitter", $event)' href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fanvaka.github.io%2Fgraph-drawing-libraries%2F"><i class="fa fa-twitter fa-lg"></i></a></li>
-          <li><a title="Share on Google+" ng-click='share("google", $event)' href="https://plus.google.com/share?url=http%3A%2F%2Fanvaka.github.io%2Fgraph-drawing-libraries%2F"><i class="fa fa-google-plus fa-lg"></i></a></li>
-          <li><a title="Share on Facebook" ng-click='share("facebook", $event)' href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fanvaka.github.io%2Fgraph-drawing-libraries%2F"><i class="fa fa-facebook fa-lg"></i></a></li>
-        </ul>
-      </div><!-- /.container-fluid -->
-    </nav>
-    <div ng-view></div>
-    <script src='external.min.js' type="text/javascript" charset="utf-8">
-    </script>
-    <script src='bundle.js' type="text/javascript" charset="utf-8">
+    <p>
+      This is a collection of well known graph (network) drawing libraries.
+      If you would like to add another library here, please <a href='https://github.com/anvaka/graph-drawing-libraries'>open an issue</a>.
+    </p>
+    <div>
+      <table id='table-container'>
+      </table>
+    </div>
+    <script src='index.js' type="text/javascript" charset="utf-8">
     </script>
   </body>
 </html>
