unified containers name

--- a/v2/sigma/01.Hello/index.html
+++ b/v2/sigma/01.Hello/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>How to create sigma.js graph</title>
   <style>
-    html, body, #sigma-container {
+    html, body, #container {
       width: 100%;
       height: 100%;
       margin: 0;
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-  <div id="sigma-container"></div>
+  <div id="container"></div>
   <script src="bundled/bundle.js"></script>
 </body>
 </html>
